--- a/TransStarter_Task/WPFApplication/Modules/Core/Dictionaries/Style.xaml
+++ b/TransStarter_Task/WPFApplication/Modules/Core/Dictionaries/Style.xaml
@@ -1,8 +1,59 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
 	<Style TargetType="Label">
-			<Setter Property="Foreground" Value="White"/>
+		<Setter Property="Foreground" Value="White"/>
 	</Style>
-	
+
+	<Style x:Key="AnnualTableCell" TargetType="Label">
+		<Setter Property="BorderBrush" Value="Black"/>
+		<Setter Property="BorderThickness" Value="1"/>
+		<Setter Property="Height" Value="20"/>
+		<Setter Property="Padding" Value="2" />
+		<Setter Property="FontSize" Value="10" />
+		<Setter Property="HorizontalContentAlignment" Value="Center"/>
+		<Setter Property="VerticalContentAlignment" Value="Center"/>
+		<Setter Property="Foreground" Value="Wheat"/>
+	</Style>
+
+	<Style x:Key="AppButton" TargetType="Button">
+		<Setter Property="Foreground" Value="White"/>
+		<Setter Property="FontSize" Value="14"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="Button">
+					<Border CornerRadius="5" x:Name="Border" Background="#50D9D9D9">
+						<Border.Triggers>
+							<EventTrigger RoutedEvent="MouseEnter">
+								<BeginStoryboard>
+									<Storyboard TargetProperty="(Border.Background).(SolidColorBrush.Color)" TargetName="Border">
+										<ColorAnimation To="#20D9D9D9" Duration="0:0:0.100" />
+									</Storyboard>
+								</BeginStoryboard>
+							</EventTrigger>
+							<EventTrigger RoutedEvent="MouseLeave">
+                                <BeginStoryboard>
+                                    <Storyboard TargetProperty="(Border.Background).(SolidColorBrush.Color)" TargetName="Border">
+                                        <ColorAnimation To="#50D9D9D9" Duration="0:0:0.100" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+							</EventTrigger>
+						</Border.Triggers>
+						<Border.Style>
+							<Style TargetType="Border">
+								<Setter Property="Margin" Value="0 3"/>
+								<Setter Property="MinWidth" Value="100"/>
+								<Setter Property="MinHeight" Value="45"/>
+								<Setter Property="MaxWidth" Value="200"/>
+								<Setter Property="MaxHeight" Value="65"/>
+							</Style>
+						</Border.Style>
+						<ContentPresenter Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" RecognizesAccessKey="True">
+						</ContentPresenter>
+					</Border>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
 </ResourceDictionary>
