--- a/TransStarter_Task/WPFApplication/Modules/MainApp/View/PopulateDBView.xaml
+++ b/TransStarter_Task/WPFApplication/Modules/MainApp/View/PopulateDBView.xaml
@@ -10,7 +10,9 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid d:DataContext="{d:DesignInstance viewModel:PopulateDBVM}" Margin="20">
             <StackPanel>
-				<Button x:Name="BeginPopulateDB" Command="{Binding StartFillingCommand}" Style="{StaticResource AppButton}">Перезаполнить базу данных</Button>
+				<Button x:Name="BeginPopulateDB" IsEnabled="{Binding IsFillingAvailable}" 
+						Command="{Binding StartFillingCommand}" Style="{StaticResource AppButton}"
+						Content="Перезаполнить базу данных"/>
 				
 				<ContentControl Content="{Binding LoadingView}">
 				</ContentControl>
